Feature/remove saga (#768)
* Remove saga. For simplicity. Keep the saga implementation in saga branch
---------

Co-authored-by: khanhtranduy <130121475+khanhtranduy@users.noreply.github.com>